resource to resourceid
